[package]
name = "dart"
version = "0.1.0"
edition = "2021"

[lib]
name = "acdcdart"
crate-type = ["cdylib","staticlib"]

[profile.release]
strip = true
opt-level = "z"
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1.82.1"
acdc = {git = "https://github.com/THCLab/acdc-rust"}
serde_json = "1.0.93"
said = { git = "https://github.com/THCLab/cesrox", branch = "macros", features = ["macros"]  }
anyhow = "1.0.69"
indexmap = "1.9.3"
